<?xml version="1.0" encoding="utf-8"?>

<!--
Tatoeba - Collection of example sentences for android 
Copyright (C) 2012 Dominik Köppl

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    
        <TextView
            android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/layout_download_path_label"
    />
    <EditText 
        android:inputType="textUri"
            android:id="@+id/download_path"
        android:singleLine="true"
                    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
        />
    
    
    <TextView
    android:id="@+id/download_download_label"
            android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/layout_download_label"
    />
    <ProgressBar 
        android:id="@+id/download_download_progress"
        android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:indeterminate="false"
    style="@android:style/Widget.ProgressBar.Horizontal"
    />
        
            <TextView
    android:id="@+id/download_download_countlabel"
        android:layout_width="fill_parent"
        android:gravity="right"
    android:layout_height="wrap_content"
    />
        
        
    <TextView
    android:id="@+id/download_extract_label"
        android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/layout_extract_label"
    />
    <RelativeLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
     
    
    <ProgressBar 
        android:id="@+id/download_extract_progress"
        android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentRight="true"
    android:indeterminate="true"
    />
       <TextView
    android:id="@+id/download_extract_filelabel"
        android:layout_width="wrap_content"
    android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@id/download_extract_progress"
    />
   </RelativeLayout>
   
    <LinearLayout 
            android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
        >
   <Button 
   android:id="@+id/download_button_cancel"
   android:text="@string/button_cancel"
       android:layout_width="wrap_content"
       android:layout_weight="1"
    android:layout_height="wrap_content"
   />
   <Button 
   android:id="@+id/download_button_start"
   android:text="@string/button_start"
       android:layout_width="wrap_content"
       android:layout_weight="1"
    android:layout_height="wrap_content"
   />
   </LinearLayout>
   
</LinearLayout>
